assets/css/custom.css
.drop-custom{
    width: 100%;
    gap: 10px;
}

@media (max-width: 768px) { 
.d-web{
    display: none;
}
.d-mob{
    display: block;
}
.module-inner{
    padding: 15px !important;
}
.ld-fancy-heading h2{
    font-size: 28px;

}
.highlight-content{
    font-size: 20px !important;
}
.pb-sm-10{
    padding-bottom: 10px;
}
 }

 @media (min-width: 770px) { 

    .d-mob{
        display: none;
    }
    .bottom-social{
        display: none !important;
    }
}

@media (min-width: 768px) and (max-width: 991.98px) { 
    .navbar-collapse.collapse{
        display: none !important;
    }
    .lqd-mobile-sec-nav .collapse:not(.show) {
    display: none !important;
    }
    button.navbar-toggle.nav-trigger.style-mobile.flex.relative.items-center.justify-end.border-none.p-0.bg-transparent.collapsed{
        display: none !important;
    }
}


.bottom-social {
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: #ffffff;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 10px;
    z-index: 999;
    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
  }

  .bottom-social img {
    width: 30px;
    height: auto;
    transition: transform 0.3s ease-in-out;
  }

  .bottom-social img:hover {
    transform: scale(1.2); /* Add a scale effect on hover */
  }

  .bottom-social img:not(:last-child) {
    margin-right: 15px; /* Add some space between the images */
  }

  [data-mobile-nav-trigger-alignment="right"] .lqd-mobile-sec .navbar-toggle {
    justify-content: flex-end;
    color: black;
}

.carousel-control.right,.carousel-control.left{
    background: none;
}

.custom-input{
    width: 100%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ced4da;
    border-radius: 4px;
    box-sizing: border-box;
    font-size: 16px;
}
textarea.custom-input{
    resize: vertical;
}

.file-input {
    width: auto;
}

.career-aboard .btn-submit {
    background-color: #343a40;
    color: #fff;
    padding: 10px 25px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
}

.career-aboard .btn-submit:hover {
    background-color: #23272b;
}

